--- a/public/css/style.css
+++ b/public/css/style.css
@@ -526,9 +526,63 @@ body {
   font-family: Inter;
 }
 
+.navbar-fixed {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .homepage-header {
   --tw-bg-opacity: 1;
   background-color: rgb(255 120 196 / var(--tw-bg-opacity));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .active {
@@ -541,6 +595,10 @@ body {
 
 .absolute {
   position: absolute;
+}
+
+.relative {
+  position: relative;
 }
 
 .left-0 {
@@ -559,13 +617,46 @@ body {
   top: 1.5rem;
 }
 
-.-z-50 {
-  z-index: -50;
+.top-\[60rem\] {
+  top: 60rem;
+}
+
+.top-\[40rem\] {
+  top: 40rem;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-\[999\] {
+  z-index: 999;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mb-96 {
+  margin-bottom: 24rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-12 {
@@ -574,6 +665,10 @@ body {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -588,16 +683,40 @@ body {
   display: none;
 }
 
-.h-\[25rem\] {
-  height: 25rem;
+.h-\[40rem\] {
+  height: 40rem;
 }
 
 .h-screen {
   height: 100vh;
 }
 
+.h-\[25rem\] {
+  height: 25rem;
+}
+
+.h-\[50rem\] {
+  height: 50rem;
+}
+
+.h-\[80rem\] {
+  height: 80rem;
+}
+
+.h-\[60rem\] {
+  height: 60rem;
+}
+
+.h-\[65rem\] {
+  height: 65rem;
+}
+
 .w-full {
   width: 100%;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -616,24 +735,16 @@ body {
   justify-content: space-around;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
 
-.gap-12 {
-  gap: 3rem;
+.self-end {
+  align-self: flex-end;
 }
 
-.gap-16 {
-  gap: 4rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -645,9 +756,9 @@ body {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-rose-600 {
+.bg-dasar {
   --tw-bg-opacity: 1;
-  background-color: rgb(225 29 72 / var(--tw-bg-opacity));
+  background-color: rgb(255 120 196 / var(--tw-bg-opacity));
 }
 
 .bg-ungu {
@@ -675,17 +786,56 @@ body {
   padding-bottom: 0.5rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
 }
 
+.pt-\[20rem\] {
+  padding-top: 20rem;
+}
+
+.pt-\[4rem\] {
+  padding-top: 4rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-\[30rem\] {
+  padding-top: 30rem;
+}
+
+.pt-\[60rem\] {
+  padding-top: 60rem;
+}
+
+.pt-\[40rem\] {
+  padding-top: 40rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl {
@@ -701,9 +851,18 @@ body {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-dasar {
+  --tw-text-opacity: 1;
+  color: rgb(255 120 196 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -742,17 +901,22 @@ body {
   background-color: rgb(216 180 254 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 1024px) {
   .lg\:static {
     position: static;
   }
 
-  .lg\:top-0 {
-    top: 0px;
+  .lg\:right-0 {
+    right: 0px;
   }
 
-  .lg\:m-4 {
-    margin: 1rem;
+  .lg\:top-0 {
+    top: 0px;
   }
 
   .lg\:mx-0 {
@@ -764,8 +928,8 @@ body {
     margin-top: 0px;
   }
 
-  .lg\:block {
-    display: block;
+  .lg\:mt-9 {
+    margin-top: 2.25rem;
   }
 
   .lg\:flex {
@@ -784,13 +948,12 @@ body {
     width: auto;
   }
 
-  .lg\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
-  .lg\:w-0 {
-    width: 0px;
+  .lg\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .lg\:justify-between {
@@ -805,28 +968,24 @@ body {
     background-color: transparent;
   }
 
-  .lg\:bg-none {
-    background-image: none;
-  }
-
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
   }
 
-  .lg\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
+  .lg\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
-  .lg\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
-  .lg\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  .lg\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .lg\:px-8 {
@@ -838,9 +997,22 @@ body {
     padding-top: 0px;
   }
 
+  .lg\:pt-28 {
+    padding-top: 7rem;
+  }
+
+  .lg\:text-start {
+    text-align: start;
+  }
+
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .lg\:text-xl {
