--- a/src/css/input.css
+++ b/src/css/input.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar-fixed {
-	@apply fixed w-full z-10 bg-white shadow-md transition duration-300 ease-in-out;
+	@apply fixed w-full z-10 bg-white shadow-md;
 }
 
 @tailwind components;
@@ -21,7 +21,7 @@ body {
 	}
 
 	.nonactive {
-		@apply -top-[32rem];
+		@apply -top-[62rem];
 	}
 }
 
