--- a/public/css/style.css
+++ b/public/css/style.css
@@ -535,11 +535,6 @@ body {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container {
@@ -590,8 +585,12 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.active {
+  top: 0px;
+}
+
 .nonactive {
-  top: -32rem;
+  top: -62rem;
 }
 
 .absolute {
@@ -680,72 +679,8 @@ body {
   height: 100vh;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-\[100rem\] {
-  height: 100rem;
-}
-
-.h-\[50rem\] {
-  height: 50rem;
-}
-
-.h-\[80rem\] {
-  height: 80rem;
-}
-
-.h-\[40rem\] {
-  height: 40rem;
-}
-
-.h-\[30rem\] {
-  height: 30rem;
-}
-
-.h-\[20rem\] {
-  height: 20rem;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-\[30rem\] {
-  width: 30rem;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-\[100rem\] {
-  width: 100rem;
-}
-
-.w-\[50rem\] {
-  width: 50rem;
-}
-
-.w-\[80rem\] {
-  width: 80rem;
-}
-
-.w-\[40rem\] {
-  width: 40rem;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.cursor-pointer {
-  cursor: pointer;
 }
 
 .flex-wrap {
@@ -804,26 +739,6 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -844,11 +759,6 @@ body {
   padding-bottom: 1rem;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .pt-16 {
   padding-top: 4rem;
 }
@@ -857,8 +767,8 @@ body {
   padding-top: 0.5rem;
 }
 
-.pt-\[6rem\] {
-  padding-top: 6rem;
+.pt-\[4rem\] {
+  padding-top: 4rem;
 }
 
 .text-center {
@@ -1065,6 +975,11 @@ body {
   .lg\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .lg\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
   }
 
   .lg\:transition-none {
