--- a/src/css/input.css
+++ b/src/css/input.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar-fixed {
-	@apply fixed w-full z-10 bg-white shadow-md;
+	@apply fixed w-full z-10 bg-white shadow-md ease-in-out duration-300;
 }
 
 @tailwind components;
