fix aos animation feature

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -23,6 +23,12 @@ body {
 	.nonactive {
 		@apply -top-[62rem];
 	}
+	.gridlayout {
+		@apply h-36 rounded-md bg-white relative;
+	}
+	.gridlayoutbox {
+		@apply absolute w-10 h-10 top-4 left-4 rounded-full flex justify-center items-center;
+	}
 }
 
 /* End Homepage */
