--- a/src/css/input.css
+++ b/src/css/input.css
@@ -17,11 +17,11 @@ body {
 		@apply bg-dasar transition duration-300 ease-in-out;
 	}
 	.active {
-		@apply top-0;
+		@apply top-0 transition duration-300 ease-in-out;
 	}
 
 	.nonactive {
-		@apply -top-[62rem];
+		@apply -top-[62rem] transition duration-300 ease-in-out;
 	}
 	.gridlayout {
 		@apply h-36 rounded-md bg-white relative;
