--- a/public/css/style.css
+++ b/public/css/style.css
@@ -607,7 +607,7 @@ body {
 
 .gridlayout {
   position: relative;
-  height: 10rem;
+  height: 12rem;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -717,6 +717,14 @@ body {
 
 .mt-\[45\%\] {
   margin-top: 45%;
+}
+
+.mt-\[60\%\] {
+  margin-top: 60%;
+}
+
+.mt-\[55\%\] {
+  margin-top: 55%;
 }
 
 .block {
