--- a/src/css/input.css
+++ b/src/css/input.css
@@ -24,10 +24,10 @@ body {
 		@apply -top-[62rem] transition duration-300 ease-in-out;
 	}
 	.gridlayout {
-		@apply h-48 rounded-md bg-white relative;
+		@apply h-48 lg:h-52 md:h-80 rounded-md bg-white relative;
 	}
 	.gridlayoutbox {
-		@apply absolute w-10 h-10 top-4 left-4 rounded-full flex justify-center items-center;
+		@apply absolute w-10 h-10 md:w-16 md:h-16 top-4 left-4 rounded-full flex justify-center items-center;
 	}
 }
 
